--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Rubik:wght@900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 :root {
   --dark-blue: #1b325e;
@@ -13,7 +13,7 @@
   padding: 0;
 }
 
-.container-fluid{
+.container-fluid {
   padding: 6% 10% 7% 15%;
 }
 
@@ -64,11 +64,11 @@
   background-repeat: no-repeat;
 }
 
-.title-hp{
+.title-hp {
   font-family: "Rubik", sans-serif;
 }
 
-.sub-title{
+.sub-title {
   font-family: "Poppins", sans-serif;
 }
 
@@ -77,7 +77,7 @@
   font-family: "Poppins", sans-serif;
 }
 
-#about-us .row .col .card-body .btn{
+#about-us .row .col .card-body .btn {
   background-color: var(--dark-blue);
 }
 
@@ -97,8 +97,8 @@
 /* MEDIA QUERY */
 
 /* MOBILE */
-@media (min-width: 0px) and (max-width: 576px){
-  .side-nav{
+@media (min-width: 0px) and (max-width: 576px) {
+  .side-nav {
     display: none;
   }
 
@@ -122,31 +122,31 @@
     flex-direction: column-reverse;
   }
 
-  #about-us .row .col .card-body{
+  #about-us .row .col .card-body {
     text-align: center !important;
   }
 
-  #about-us .row .col .card-title{
+  #about-us .row .col .card-title {
     font-size: 1.2rem !important;
     padding-top: 5%;
   }
 
-  #about-us .row .col .card-body .btn{
+  #about-us .row .col .card-body .btn {
     width: 35% !important;
     justify-self: center !important;
   }
 
   /* service */
-  .mobile-services{
+  .mobile-services {
     background-color: #d9d9d942;
   }
 
-  .mobile-services .title{
+  .mobile-services .title {
     text-align: center;
-    color: #0659A7;
+    color: #0659a7;
   }
 
-  #services{
+  #services {
     display: none;
   }
 
@@ -157,8 +157,8 @@
 }
 
 /* MOBILE LANDSCAPE*/
-@media (min-width: 577px) and (max-width: 768px){
-  .side-nav{
+@media (min-width: 577px) and (max-width: 768px) {
+  .side-nav {
     display: none;
   }
 
@@ -181,31 +181,29 @@
     flex-direction: column-reverse;
   }
 
-  #about-us .row .col .card-body{
+  #about-us .row .col .card-body {
     text-align: center !important;
   }
 
-  #about-us .row .col .card-title{
+  #about-us .row .col .card-title {
     font-size: 1.5rem !important;
     padding-top: 5%;
   }
 
-  #about-us .row .col .card-body .btn{
+  #about-us .row .col .card-body .btn {
     width: 20% !important;
     justify-self: center !important;
   }
 
   /* service */
-  .mobile-services{
+  .mobile-services {
     display: none;
   }
-
 }
 
-
 /* TABLET LANDSCAPE*/
-@media (min-width: 769px) and (max-width: 1024px){
-  .top-nav{
+@media (min-width: 769px) and (max-width: 1024px) {
+  .top-nav {
     display: none;
   }
 
@@ -220,29 +218,29 @@
   }
 
   /* about us */
-  #about-us .row{
+  #about-us .row {
     display: grid;
     grid-template-columns: 60% auto;
   }
 
-  #about-us .row .col .card-title{
+  #about-us .row .col .card-title {
     font-size: 1.5rem !important;
     /* padding-top: 5%; */
   }
 
-  #about-us .row .col .card-body .btn{
+  #about-us .row .col .card-body .btn {
     width: 25%;
   }
 
   /* service */
-  .mobile-services{
+  .mobile-services {
     display: none;
   }
 }
 
 /* LAPTOP & LAPTOP LARGE*/
-@media (min-width: 1025px) and (max-width: 1440px){
-  .top-nav{
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .top-nav {
     display: none;
   }
 
@@ -257,24 +255,24 @@
   }
 
   /* about us */
-  #about-us .row{
+  #about-us .row {
     display: grid;
     grid-template-columns: 63% auto;
   }
 
-  #about-us .row .col .card-body .btn{
+  #about-us .row .col .card-body .btn {
     width: 18%;
   }
 
   /* service */
-  .mobile-services{
+  .mobile-services {
     display: none;
   }
 }
 
 /* DEKSTOP PC*/
-@media (min-width: 1441px) and (max-width: 1950px){
-  .top-nav{
+@media (min-width: 1441px) and (max-width: 1950px) {
+  .top-nav {
     display: none;
   }
 
@@ -289,48 +287,48 @@
   }
 
   /* about us */
-  #about-us .row{
+  #about-us .row {
     display: grid;
     grid-template-columns: 60% auto;
   }
 
-  #about-us .row .col .card-title{
+  #about-us .row .col .card-title {
     font-size: 2.5rem !important;
   }
 
-  #about-us .row .col .card-text{
+  #about-us .row .col .card-text {
     font-size: 1.5rem !important;
   }
 
-  #about-us .row .col .card-body .btn{
+  #about-us .row .col .card-body .btn {
     font-size: 1.2rem;
     width: 18%;
   }
 
   /* service */
-  .mobile-services{
+  .mobile-services {
     display: none;
   }
 }
 
 /* TESTIMONY */
-.customer-testimony{
+.customer-testimony {
   background-color: #5f3daf;
 }
 
-.title-testimony{
+.title-testimony {
   color: #ffffff;
 }
 
 .single-testimony {
   border: 5px solid #ffffff;
   border-radius: 2rem;
-  padding: 5%; 
+  padding: 5%;
   margin: 1% 15%;
 }
 
 .single-testimony:before {
-  content: '\f10d';
+  content: "\f10d";
   font-family: FontAwesome;
   color: #ffffff;
   font-size: 4rem;
@@ -343,7 +341,7 @@
 }
 
 .single-testimony:after {
-  content: '\f10e';
+  content: "\f10e";
   font-family: FontAwesome;
   color: #ffffff;
   font-size: 4rem;
@@ -355,12 +353,12 @@
   height: 100px;
 }
 
-.owl-dots{
+.owl-dots {
   margin-top: 2%;
   text-align: center;
 }
 
-.owl-dots button{
+.owl-dots button {
   background-color: #ffffff !important;
   width: 7px;
   height: 7px;
@@ -369,8 +367,8 @@
   transition: 0.3s;
 }
 
-.owl-dots button.active{
-width: 15px;
+.owl-dots button.active {
+  width: 15px;
 }
 
 /* OUR CLIENTS */
@@ -378,13 +376,13 @@ width: 15px;
   padding-bottom: 70px;
 }
 
-#our-clients .container .row.mb-4 .col{
+#our-clients .container .row.mb-4 .col {
   align-self: center;
   cursor: pointer;
   filter: grayscale(1);
 }
 
-#our-clients .container .row.mb-4 .col:hover{
+#our-clients .container .row.mb-4 .col:hover {
   filter: grayscale(0);
 }
 
@@ -402,7 +400,7 @@ width: 15px;
 } */
 
 /* ARTICLE */
-.owl-nav{
+.owl-nav {
   text-align: center;
 }
 
@@ -427,11 +425,10 @@ body > section:nth-child(9) > div > div.owl-nav > button.owl-next > span {
 /* FOOTER */
 .footer {
   background-color: var(--dark-blue);
-  padding: 20px 0px 0px 0px;
+  padding: 2% 5% 1% 15%;
 }
 
 /* ABOUT US PAGE */
-
 
 /* SOCIAL MEDIA PAGE */
 .social-media-page {
