--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -120,12 +120,12 @@
   }
 
   .text{
-    font-size: 0.8rem !important;
+    font-size: 0.9rem !important;
   }
 
   /* homepage */
   .title-hp {
-    padding-top: 70%;
+    padding-top: 30%;
     font-size: 2rem;
   }
 
@@ -178,8 +178,9 @@
   }
 
   .location {
-    width: 10rem;
-    height: 10rem;
+    align-self: center;
+    width: 18rem !important;
+    height: 12rem !important;
   }
 
   /* footer */
@@ -193,7 +194,7 @@
   }
 
   .footer .r-copyright .copyright {
-    font-size: 0.5rem;
+    font-size: 0.7rem;
   }
 
   .footer .r-copyright .sosmed {
@@ -507,6 +508,10 @@
 }
 
 /* ARTICLE */
+#article{
+  gap: 2%;
+}
+
 .owl-nav {
   text-align: center;
 }
