--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -120,7 +120,7 @@
   }
 
   .text{
-    font-size: 0.9rem !important;
+    font-size: 0.8rem !important;
   }
 
   /* homepage */
@@ -428,7 +428,7 @@
   background-color: #5f3daf;
 }
 
-.title-testimony {
+.customer-testimony .title {
   color: #ffffff;
 }
 
