--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,10 @@
   background-color: #d9d9d942;
 }
 
+.btn{
+  background-color: #1b325e;
+}
+
 .footer {
   background-color: var(--dark-blue);
 }
@@ -102,7 +106,7 @@
     padding-top: 7%;
   }
 
-  .title{
+  .title {
     font-size: 1.5rem !important;
     text-align: center;
   }
@@ -112,26 +116,17 @@
   }
 
   /* navbar */
-  /* .nav-top .container .offcanvas{
-    position: absolute;
-    top: 100%;
-    right: -100%;
-    background-color: #ffffff;
-    width: 10rem;
-    height: 100vh;
-  } */
-
-  .top-nav .container .offcanvas{
+  .top-nav .container .offcanvas {
     /* top: 4rem; */
     right: -12rem;
     background-color: #fafafa;
   }
 
-  .top-nav .container .navbar-toggler{
+  .top-nav .container .navbar-toggler {
     color: #fafafa;
   }
 
-  .top-nav .container .offcanvas .navbar-nav .dropdown-menu{
+  .top-nav .container .offcanvas .navbar-nav .dropdown-menu {
     background-color: #fafafa;
   }
 
@@ -146,7 +141,7 @@
   }
 
   /* about us */
-  #about-us{
+  #about-us {
     padding-top: 10% !important;
   }
 
@@ -164,21 +159,25 @@
   }
 
   #about-us .row .col .card-body .btn {
-    background-color: var(--dark-blue);
-    /* width: 35%; */
     justify-self: center;
     margin-top: -5%;
   }
+
+  /* clients 
+  jobb = 70%
+  monster 50%
+  zao = 70%
+  embun 50%*/
 
   /* service */
   #services {
     display: none;
   }
 
-  .mobile-services .services-content .card .card-body .btn{
-    background-color: #1b325e;
+  .mobile-services .services-content .card .card-body .btn {
     width: 36%;
-    font-size: 0.8rem;
+    font-size: 0.8rem !important;
+    justify-self: center;
   }
 
   .mobile-services .services-content .owl-dots button {
@@ -189,22 +188,22 @@
     margin-right: 1%;
     transition: 0.3s;
   }
-  
+
   .mobile-services .services-content .owl-dots button.active {
     width: 15px;
   }
 
   /* .owl-carousel .owl-stage-outer */
 
-/* .pagination a.active {
+  /* .pagination a.active {
   text-decoration: underline;
   color: #0d6efd;
   background-color: dodgerblue;
   color: white;
 } */
 
-/* Add a grey background color on mouse-over */
-/* .pagination a:hover:not(.active) {text-decoration: underline;} */
+  /* Add a grey background color on mouse-over */
+  /* .pagination a:hover:not(.active) {text-decoration: underline;} */
 
   /* .mobile-services .service-content .card .card-body .title{
     text-align: center;
@@ -236,20 +235,20 @@
   }
 
   /* clients */
-  #our-clients .brand{
+  #our-clients .brand {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  #our-clients .sub-clients{
+  #our-clients .sub-clients {
     margin-bottom: 0rem !important;
   }
 
   /* article */
-  #article .owl-carousel .owl-nav{
+  #article .owl-carousel .owl-nav {
     display: none;
   }
 
-  #article .owl-carousel .owl-dots{
+  #article .owl-carousel .owl-dots {
     display: none;
   }
 
@@ -339,14 +338,43 @@
   }
 
   /* clients */
-  #our-clients .brand{
+  #our-clients .brand {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  /* testimony */
+  .single-testimony {
+    border: 0.2rem solid #ffffff !important;
+    margin: 1% 1% !important;
+    padding: 8% !important;
+  }
+
+  .single-testimony:before {
+    font-size: 3rem !important;
+    left: -0.5rem !important;
+    top: -1.5rem !important;
+    width: 5rem !important;
+    height: 5rem !important;
+  }
+
+  .single-testimony:after {
+    font-size: 3rem !important;
+    right: -0.7rem !important;
+    bottom: -0.6rem !important;
+    width: 5rem !important;
+    height: 5rem !important;
   }
 
   /* contact */
   #contact .r-info {
     display: grid;
     grid-template-columns: 7% auto;
+  }
+
+  .location {
+    align-self: center;
+    width: 37rem !important;
+    height: 15rem !important;
   }
 
   /* footer */
@@ -400,14 +428,16 @@
   }
 
   /* clients */
-  #our-clients .brand{
+  #our-clients .brand {
     grid-template-columns: repeat(3, 1fr);
   }
 
   /* contact */
-  #contact .r-info {
+
+
+  #contact .r-maps .c-text .r-info {
     display: grid;
-    grid-template-columns: 5% auto;
+    grid-template-columns: 15% auto !important;
   }
 
   /* footer */
@@ -456,12 +486,12 @@
   }
 
   /* clients */
-  #our-clients .brand{
+  #our-clients .brand {
     grid-template-columns: repeat(5, 1fr);
     text-align: center;
   }
 
-  #our-clients .brand .col img{
+  #our-clients .brand .col img {
     width: 80%;
     max-width: 80%;
   }
@@ -470,7 +500,7 @@
   #contact .text {
     align-self: center;
   }
-  
+
   #contact .r-info {
     display: grid;
     grid-template-columns: 6% auto;
@@ -545,7 +575,7 @@
   }
 
   /* clients */
-  #our-clients .brand{
+  #our-clients .brand {
     grid-template-columns: repeat(5, 1fr);
   }
 
