--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -298,10 +298,10 @@
     /* padding-top: 5%; */
   }
 
-  /* .footer .trisula {
+  .footer .trisula {
     display: block;
     align-self: center;
-  } */
+  }
 
   .footer .trisula .logo img {
     width: 4rem;
