--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -170,10 +170,6 @@
   zao = 70%
   embun 50%*/
 
-  #our-clients .title{
-    margin-bottom: 1%;
-  }
-
   /* service */
   #services {
     display: none;
@@ -249,24 +245,16 @@
     grid-template-columns: repeat(3, 1fr);
   }
 
-  #our-clients .sub-clients {
-    margin-bottom: 0rem !important;
-  }
-
   /* article */
   #article .owl-carousel .card .card-body .text{
     text-align: justify;
   }
 
-  #article .owl-carousel .owl-nav {
-    display: none;
-  }
-
-  #article .owl-carousel .owl-dots {
-    display: none;
-  }
-
   /* contact */
+  #contact .title{
+    text-align: left;
+  }
+
   #contact .r-info {
     display: grid;
     grid-template-columns: 12% auto;
@@ -279,7 +267,7 @@
   }
 
   /* footer */
-  .footer {
+  /* .footer {
     padding: 7% 15% 2% 15%;
     text-align: center;
   }
@@ -295,7 +283,6 @@
   .footer .r-copyright .sosmed {
     display: flex;
     justify-content: space-evenly;
-    /* padding-top: 5%; */
   }
 
   .footer .trisula {
@@ -305,7 +292,7 @@
 
   .footer .trisula .logo img {
     width: 4rem;
-  }
+  } */
 }
 
 /* MOBILE LANDSCAPE*/
@@ -316,6 +303,20 @@
 
   .container-fluid {
     padding: 10%;
+  }
+
+  .title {
+    font-size: 1.7rem !important;
+    text-align: center;
+  }
+
+  .text {
+    font-size: 1rem !important;
+  }
+
+  .c-title{
+    font-size: 1.5rem !important;
+    color: #0659a7;
   }
 
   /* homepage */
@@ -334,27 +335,63 @@
   }
 
   #about-us .row .col .card-body {
-    text-align: center !important;
+    text-align: justify;
   }
 
   #about-us .row .col .card-title {
     font-size: 1.5rem !important;
     padding-top: 5%;
+    text-align: center;
   }
 
   #about-us .row .col .card-body .btn {
-    width: 20% !important;
     justify-self: center !important;
+    /* margin-top: -5%; */
   }
 
   /* service */
-  .mobile-services {
+  #services {
     display: none;
   }
 
+  .mobile-services .services-content .card .card-body .text{
+    text-align: justify;
+  }
+
+  .mobile-services .services-content .card img{
+    height: 50rem !important;
+  }
+
+  .mobile-services .services-content .card .card-body .btn {
+    width: 20%;
+    font-size: 1rem !important;
+    justify-self: center;
+    margin-top: 2%;
+  }
+
+  .mobile-services .services-content .owl-dots button {
+    background-color: #0659a7 !important;
+    width: 0.6rem;
+    height: 0.4rem;
+    border-radius: 1rem;
+    margin-right: 1%;
+    transition: 0.3s;
+  }
+
+  .mobile-services .services-content .owl-dots button.active {
+    width: 18px;
+  }
+
+  /* #services .row .col-md-3 .card .list-group .list-group-item{
+    padding: 15% 2% 15% 2% !important;
+  } */
+
   /* clients */
   #our-clients .brand {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 2fr);
+    column-gap: 7% !important;
+    width: 85%;
+    margin-left: 8%;
   }
 
   /* testimony */
@@ -381,6 +418,10 @@
   }
 
   /* contact */
+  #contact .title{
+    text-align: left;
+  }
+
   #contact .r-info {
     display: grid;
     grid-template-columns: 7% auto;
@@ -393,7 +434,7 @@
   }
 
   /* footer */
-  .footer {
+  /* .footer {
     padding: 2% 5% 0% 15%;
   }
 
@@ -403,7 +444,7 @@
 
   .footer .trisula .logo img {
     width: 5rem;
-  }
+  } */
 }
 
 /* TABLET LANDSCAPE*/
@@ -456,7 +497,7 @@
   }
 
   /* footer */
-  .footer {
+  /* .footer {
     padding: 2% 5% 1% 15%;
   }
 
@@ -466,7 +507,7 @@
 
   .footer .trisula .logo img {
     width: 7rem;
-  }
+  } */
 }
 
 /* LAPTOP & LAPTOP LARGE*/
@@ -522,7 +563,7 @@
   }
 
   #contact .r-maps {
-    display: grid;
+    /* display: grid; */
     grid-template-columns: 65% auto;
   }
 
@@ -532,7 +573,7 @@
   }
 
   /* footer */
-  .footer {
+  /* .footer {
     padding: 2% 5% 1% 15%;
   }
 
@@ -546,7 +587,7 @@
 
   .footer .trisula .logo img {
     width: 10rem;
-  }
+  } */
 }
 
 /* DEKSTOP PC*/
@@ -601,7 +642,7 @@
   }
 
   /* footer */
-  .footer {
+  /* .footer {
     padding: 2% 5% 1% 15%;
   }
 
@@ -611,7 +652,7 @@
 
   .footer .trisula .logo img {
     width: 10rem;
-  }
+  } */
 }
 
 /* TESTIMONY */
@@ -690,34 +731,25 @@
   padding: 1rem;
 }
 
-/* .our-clients {
-  padding-bottom: 70px;
-} */
+#our-clients .sub-clients {
+  margin-bottom: 0rem !important;
+}
 
-/* .title-clients {
-  margin-top: -2rem;
-  margin-bottom: -1rem;
-} */
-
-/* .sub-clients {
-  padding: 2rem 6rem;
-} */
+#our-clients .title{
+  margin-bottom: 1%;
+}
 
 /* ARTICLE */
 #article {
   gap: 2%;
 }
 
-.owl-nav {
-  text-align: center;
+#article .owl-carousel .owl-nav {
+  display: none;
 }
 
-body > section:nth-child(9) > div > div.owl-nav > button.owl-prev.disabled > span {
-  font-size: 3rem;
-}
-
-body > section:nth-child(9) > div > div.owl-nav > button.owl-next > span {
-  font-size: 3rem;
+#article .owl-carousel .owl-dots {
+  display: none;
 }
 
 /* ABOUT US PAGE */
@@ -736,4 +768,16 @@ body > section:nth-child(9) > div > div.owl-nav > button.owl-next > span {
 .list-group-item.active-menu {
   background-color: #1b325e;
   color: #ffffff;
+}
+
+.footer{
+  padding: 2% 10% 2% 15%;
+}
+
+.footer .trisula{
+  margin-right: -20%;
+}
+
+.footer .pages{
+  margin-right: 20%;
 }
